# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] The -i option (idle timeout) now works in listen mode as well
  as connect mode. [Tomas Hozza]

o Fixed a byte-ordering problem on little-endian architectures when
  doing idle scan with a zombie that uses broken ID incremements.
  [David Fifield]

o [Ncat] Ncat now support chained certificates with the --ssl-cert
  option. [Greg Bailey]

o Stop parsing TCP options after reaching EOL in libnetutil. Bug reported
  by Gustavo Moreira. [Henri Doreau]

o [NSE] The dns-ip6-arpa-scan script now optionally accepts "/" syntax
  for a network mask. Based on a patch by Indula Nayanamith.

o [Ncat] Reduced the default --max-conns limit from 100 to 60 on
  Windows, to stay within platform limitations. Suggested by Andrey
  Olkhin.

o Fixed IPv6 routing table alignment on NetBSD.

o [NSE] Added http-phpmyadmin-dir-traversal by Alexey Meshcheryakov.

o Added a service probe for Erlang distribution nodes.
  [Michael Schierl]

o Updated libdnet to not SIOCIFNETMASK before SIOCIFADDR on OpenBSD. This was
  reported to break on -current as of May 2013. [Giovanni Bechis]

o Fixed address matching for SCTP (-PY) ping. [Marin Maržić]

o Removed some non-ANSI-C strftime format strings ("%F") and
  locale-dependent formats ("%c") from NSE scripts and libraries.
  C99-specified %F was noticed by Alex Weber. [Daniel Miller]

o [Zenmap] Added Polish translation by Jacek Wielemborek.

o [NSE] Added http-coldfusion-subzero. It detects Coldfusion 9 and 10
  vulnerable to a local file inclusion vulnerability and grabs the 
  version, install path and the administrator credentials. [Paulino Calderon]

o [Nsock] Added a minimal regression test suite for nsock. [Henri Doreau]

o [NSE] Updated redis-brute.nse and redis-info.nse to work against
  the latest versions of redis server. [Henri Doreau]

o [Ncat] Fixed errors in conneting to IPv6 proxies. [Joachim Henke]

o Added a service probe for Minecraft servers. [Eric Davisson]
